// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components: Links ActionLink renders 1`] = `
<Fragment>
  <h2
    id="action-link"
  >
    Action link
  </h2>
  <p>
    Action links.
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <ActionLink
      linkText="My link"
    />
  </ComponentPreview>
</Fragment>
`;

exports[`Components: Links ActionLinkBadge renders 1`] = `
<Fragment>
  <h2
    id="action-link-badge"
  >
    Action link with Badge
  </h2>
  <p>
    Action links.
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <ActionLink
      badge={
        Object {
          "text": "40",
          "type": "badge-default badge-number",
        }
      }
      linkText="My link"
    />
  </ComponentPreview>
</Fragment>
`;

exports[`Components: Links ActionLinkBadgeSmallText renders 1`] = `
<Fragment>
  <h2
    id="action-link-badge-small-text"
  >
    Action link with Badge and small text
  </h2>
  <p>
    Action Links can contain both Badge and small text
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <ActionLink
      badge={
        Object {
          "text": "40",
          "type": "badge-default badge-number",
        }
      }
      linkText="My link"
      smallText="This link directs to my page"
    />
  </ComponentPreview>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <ActionLink
      badge={
        Object {
          "text": "40",
          "type": "badge-default badge-number",
        }
      }
      linkText="My link"
      multiline={true}
      smallText="This link directs to my page"
    />
  </ComponentPreview>
</Fragment>
`;

exports[`Components: Links ActionLinkNewTab renders 1`] = `
<Fragment>
  <h2
    id="action-link-new-tab"
  >
    Action link that opens a new tab
  </h2>
  <p>
    An Action Link used in cases where a new tab is supposed to open is provided. Use 
    <CodeTags
      code=".action-link-new-tab"
      type="secondary"
    />
     when it is known that the target will open in a new tab. 
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <ActionLink
      linkText="My link"
      newTab={true}
    />
  </ComponentPreview>
</Fragment>
`;

exports[`Components: Links ActionLinkSmallText renders 1`] = `
<Fragment>
  <h2
    id="action-link-small-text"
  >
    Action link with small text
  </h2>
  <p>
    A small text can be displayed as a part of the Action Link. There are two types of Action Links with small text, one with the inline small text and one with the texts on different lines.
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <ActionLink
      linkText="My link"
      smallText="This link directs to my page"
    />
  </ComponentPreview>
  <p>
    Use 
    <CodeTags
      code=".action-link-multiline"
      type="secondary"
    />
     for the Action Link with the texts on different lines.
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <ActionLink
      linkText="My link"
      multiline={true}
      smallText="This link directs to my page"
    />
  </ComponentPreview>
</Fragment>
`;

exports[`Components: Links ButtonLinks renders 1`] = `
<Fragment>
  <h2
    id="button-links"
  >
    Links with buttons
  </h2>
  <p>
    To use links with buttons, for instance as a cancel button, use 
    <CodeTags
      code=".btn.btn-link"
      type="secondary"
    />
     in a 
    <CodeTags
      code="<button>"
      type="primary"
    />
    .
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <Button
      label="Approve"
      type="primary"
    />
    

    <Button
      label="Cancel"
      type="link"
    />
  </ComponentPreview>
</Fragment>
`;

exports[`Components: Links IconLinks renders 1`] = `
<Fragment>
  <h2
    id="icon-links"
  >
    Links with icons
  </h2>
  <p>
    Use class 
    <CodeTags
      code=".icon-link"
      type="secondary"
    />
     on links with icons. Using icon with links can help further convey the result of clicking on the link, as can be seen in the examples below.
  </p>
  <h4>
    Navigates to a previous page
  </h4>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <Link
      leftIcon="arrow_back_ios"
      linkText="My invoices"
    />
  </ComponentPreview>
  <h4>
    Enables editing
  </h4>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <Link
      leftIcon="edit"
      linkText="My invoices"
    />
  </ComponentPreview>
  <h4>
    Opens in a new tab
  </h4>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <Link
      linkText="My invoices"
      rightIcon="open_in_new"
    />
  </ComponentPreview>
</Fragment>
`;

exports[`Components: Links TextLinks renders 1`] = `
<Fragment>
  <h2
    id="text-links"
  >
    Text links
  </h2>
  <p>
    Text links are links used in paragraphs of text.
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <p>
      

      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
      

      Ut enim ad minim veniam, quis nostrud 
      <Link
        linkText="exercitation"
      />
       ullamco laboris nisi ut aliquip ex ea commodo consequat.
      

    </p>
  </ComponentPreview>
  <h3>
    Small link
  </h3>
  <p>
    Use links in small with legal texts, such as links to terms and contitions
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <small>
      

      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
      

      Ut enim ad minim veniam, quis nostrud 
      <Link
        linkText="exercitation"
      />
       ullamco laboris nisi ut aliquip ex ea commodo consequat.
      

    </small>
  </ComponentPreview>
</Fragment>
`;

exports[`Components: Links renders 1`] = `
<DocContainer
  docToc={true}
>
  <p
    className="lead"
  >
    Links
  </p>
  <TextLinks />
  <ButtonLinks />
  <IconLinks />
  <ActionLink />
  <ActionLinkBadge />
  <ActionLinkSmallText />
  <ActionLinkBadgeSmallText />
  <ActionLinkNewTab />
</DocContainer>
`;
